# with-baby-store

./: Cargo.toml  Dockerfile
curl/: get.curl  info.curl  put.curl
k8s/: mongo.yml  pvs.yml  sts.yml  svc.yml
src/: core.rs  handlers.rs  main.rs  mongo_store.rs
